[package]
name = "signature_rsa"
version = "0.1.0"
authors = ["readlnh <readlnh@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = { version = "0.1.4", features = ["serde1"]}
rand = "0.6.5"
base64 = "0.10.1"
sha-1 = "0.8.1"
sha2 = "0.8.0"
hex = "0.4.0"
serde_test = "1.0.89"
serde_json = "1.0.42"
rsa-der = "0.2.1"
clap = "2.33.0"
num-bigint = "0.2.3"